[Payments] Do not show error on initial load of address screen

Previously would show an error if no shipping option was
selected.

Also no longer having an error if no entries are selected but some are
available, which is a valid state to be in.

BUG=721127
TEST=browser_tests, components_unittests

Review-Url: https://codereview.chromium.org/2872033007
Cr-Commit-Position: refs/heads/master@{#470962}

Former-commit-id: b77b873b4678bafcab1c97ea39882ec9b43ee14d